--- a/config/logstash/pipeline/logstash.conf
+++ b/config/logstash/pipeline/logstash.conf
@@ -3,6 +3,43 @@ input {
     interval => 5
     message  => 'Hello from Logstash 💓'
   }
+  http {
+		port => 31311
+		codec => json
+		user => elastic
+		password => "${ELASTIC_PASSWORD}"  # read password from logstash.keystore
+	}
+}
+
+## Add your filters / logstash plugins configuration here
+# Seperate selenium test results.
+filter {
+	split {
+    field => "testResults"
+	}
+	mutate {
+    rename => ["[testResults][assertionResults]", "assertionResults"]
+		remove_field => "[testResults][name]"
+  }
+	split {
+    field => "assertionResults"
+	}
+	mutate {
+    rename => [
+      "[assertionResults][title]", "title",
+			"[assertionResults][status]", "status",
+			"[assertionResults][ancestorTitles]", "test_case"
+      ]
+    }
+}
+
+# Separate the logs
+filter {
+ 	split {
+		field => "events"
+		target => "e"
+		remove_field => "events"
+	}
 }
 
 output {
